Bug 98647 - UI: Tools >Outline Numbering >Position and Spacing .. set Value is only set after touching arrows of the spin field control
Summary: UI: Tools >Outline Numbering >Position and Spacing .. set Value is only set a...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.1.1.1 rc
Hardware: All All
: medium normal
Assignee: Noel Grandin
URL:
Whiteboard: target:5.2.0 target:5.1.3
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2016-03-14 13:17 UTC by Ivo Smelhaus
Modified: 2016-10-25 19:09 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ivo Smelhaus 2016-03-14 13:17:23 UTC
If value in "Tools - Outline Numbering - Position and Spacing" is set directly by writing number, the change is ignored. Set value by using increase/decrease arrow works OK. Even if the arrow is pressed after the value is set directly by writing, the new value is accepted. On the other hand clicking other field or pressing tab does not work.
Comment 1 Cor Nouws 2016-03-14 15:22:18 UTC
Thanks Ivo.
I confirm the issue.
AFAIR, this has been a problem since years..
Comment 2 Ivo Smelhaus 2016-03-14 15:41:12 UTC
Just to be sure. Situation, where after modifying one field is necessary to touch some other field or button or pressing tab is not so rare but in this case it is necessary to click the arrow in the same field.
Comment 3 Cor Nouws 2016-03-14 16:28:24 UTC
Ah, indeed. Wierd.
It looks as if some settings are ignored too..
Comment 4 raal 2016-03-15 13:05:10 UTC
This seems to have begun at the below commit.
Adding Cc: to Noel Grandin; Could you possibly take a look at this one? Thanks
 3b3419d9e5b5e397dc4ad05d1151446cfb48db53 is the first bad commit
commit 3b3419d9e5b5e397dc4ad05d1151446cfb48db53
Author: Norbert Thiebaud <nthiebaud@gmail.com>
Date:   Thu Sep 24 12:19:49 2015 -0700

    source e85b2333bce7b1dcae73861df6d90b48b9f4efe5

    source e85b2333bce7b1dcae73861df6d90b48b9f4efe5

author	Noel Grandin <noelgrandin@gmail.com>	2015-09-24 11:53:17 (GMT)
committer	Noel Grandin <noelgrandin@gmail.com>	2015-09-24 16:19:37 (GMT)
commit e85b2333bce7b1dcae73861df6d90b48b9f4efe5 (patch)
tree 21d066cecfbfda9ace96b26953ddcc3ae1764001
parent ff6462e6307e6924dc6c8178043ae9032f4b4152 (diff)
convert Link<> to typed
Comment 5 Commit Notification 2016-04-05 07:45:20 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c10d56c6c33ad27d9f4fb12e499a8b246d88da9f

tdf#98647 fix bug in tools->outline-numbering

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2016-04-07 08:15:45 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f664089b0692c649d3a88e2a0817544f70ac271a&h=libreoffice-5-1

tdf#98647 fix bug in tools->outline-numbering

It will be available in 5.1.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.