tdf#98647 fix bug in tools->outline-numbering

fallout from
commit e85b2333bce7b1dcae73861df6d90b48b9f4efe5
"convert Link<> to typed"

Change-Id: I8f98bcf6d1eff596e139f9f3a2e3d32fcce67d11